--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,16 @@
 body {
     font-family: 'Times New Roman', Times, serif;
 }
+
+.input-group input[type=text]{
+padding: -30px;
+font-size: 17px;
+float: left;
+width: auto;
+background: white;
+}
+
+input#search-form.formcontrol{
+    padding: -10px, 12px;
+    display: inline;
+}
