--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,8 @@
 body {
     font-family: 'Times New Roman', Times, serif;
 }
+/* styling for the text input*/
 
-.input-group input[type=text]{
-margin: 0px 10px;
-border-left: auto;
-font-size: 17px;
-float: left;
-width: auto;
-background: white;
-}
 
-.input-group button {
-float:left;
-width:auto;
-padding: 10px;
-background: white;
-color: black;
-font-size: 17px;
-}
+/* styling for the search button*/
+
